fancave/fancave-client/fancave-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fancave-client
  labels:
    app: ui
spec:
  ports:
  - name: http
    port: 3080
  selector:
    app: ui
  type: NodePort
